# DRAMsim3

./: .gitignore  CMakeLists.txt
configs/: DDR4_8Gb_x16_3200.ini  HBM2_4Gb_x128_358.ini
scripts/: test_pythonAPI.py
src/: DramSimulator_DramSimulator.cpp  DramSimulator_DramSimulator.h  DramSimulator_python.cpp  DramSimulator_python.h  common.cc  controller.cc  cosimulation.cc  cosimulation.h  dram_system.cc  dram_system.h
